chore: using quarkus in op-monitor-daemon
Refs: XRDDEV-2829